tests/parser/tests/cases/should_fail/double_hash/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:7
1 |   k := ##naughty_intrinsic();
  |         ^ here
  = note: Expected an identifier.
